--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog" />
         <activity
+            android:name="org.inspira.polivoto.Activity.InputDateAndTimeValuesActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
             android:name="org.inspira.polivoto.Activity.DataPickerActivity"
             android:label="@string/app_name" />
         <activity
