--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog" />
         <activity
+            android:name="org.inspira.polivoto.Activity.Lobby"
+            android:label="@string/app_name" />
+        <activity
             android:name="org.inspira.polivoto.Activity.InputDateAndTimeValuesActivity"
             android:label="@string/app_name" />
         <activity
