--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile files('src/main/libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
+    compile 'com.android.support:design:23.1.1'
 }
